# meetingbot

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TA_INSTRUCTION.md  infracost.yml  infracost.yml.tmpl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/backend/: .dockerignore  .env.example  .eslintrc  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  drizzle.config.ts  eslint.config.js  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  request_testing.http  requirements.txt  tsconfig.eslint.json  tsconfig.json
src/backend/app/: db.py  main.py  models.py  request_testing.http
src/backend/app/routes/: bots.py  users.py
src/backend/app/utils/: MutableSABaseModel.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: c92b9dd343a3_init.py
src/backend/routes/: bots_test.py  meetings.py  meetings_test.py
src/backend/src/: __init__.py  constants.ts  main.py
src/backend/src/db/: index.ts  schema.ts
src/backend/src/db/migrations/: 0000_chief_rage.sql  0000_fantastic_karma.sql  0000_silly_quicksilver.sql  0001_concerned_magus.sql  0001_new_snowbird.sql  0002_fast_phil_sheldon.sql  (+2 more)
src/backend/src/routers/: apiKeys.ts  bots.ts  community.ts  events.ts  index.ts  usage.ts  users.ts
src/backend/src/routes/: audio.py  audio_test.py  bots.py  meetings_test.py
src/backend/src/server/: auth.ts  index.ts  openapi.ts  trpc.ts
src/backend/src/services/: botDeployment.ts
src/backend/src/utils/: database.ts  s3.ts
src/backend/tests/: test_example.py
(+275 files in other folders)
