[project]
name = "meeting-bot-backend"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.115.0",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye.scripts]
dev = "uvicorn src.main:app --reload"
test = "pytest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
